# hiremepls

./: .pre-commit-config.yaml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  manage.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0b745d619f0a_add_password_and_super_user_field_to_.py  19c0e4ddda13_add_schema_for_jobs.py  3179cea41117_add_slug_to_company.py  381a14557fa8_add_tasks_table.py  39ee9745ed1c_add_unique_constraint_in_applications_.py  6070b25e79f3_add_email_to_user_remove_age_and_.py  6d0f20ad13e6_create_applications_table.py  77f07a997458_add_jobs_tables.py  ab5b6e12907e_initial_migration.py  f26f1c9fd5be_add_date_columns_to_all_tables.py  f31c0e87ff2f_migrate_user_tables_to_its_own_schema.py  fe042a829160_make_job_url_unique.py
backend/heavy/: fetcher.py  llm.py
backend/lib/applications/: models.py  repository.py
backend/lib/jobs/: models.py  repository.py
backend/lib/users/: repository.py
backend/src/: deps.py  main.py  models.py
backend/src/applications/: api.py  api_schema.py  curl_llm_pipeline.py  deps.py  models.py  repository.py  service.py  status_flow.py
backend/src/auth/: api.py  crypto.py  deps.py
backend/src/common/: api_schema.py  base_model.py  base_repository.py  deps.py  utils.py
backend/src/core/: config.py  db.py  security.py
backend/src/jobs/: api.py  api_schema.py  curl_llm_pipeline.py  deps.py  fetcher.py  jobs_repository.py  jobs_service.py  llm.py  llm_schema.py  models.py  parser.py  repository.py  schema.py  service.py
backend/src/lib/: crypto.py  pyproject.toml
backend/src/tasks/: README.md  pyproject.toml
backend/src/users/: api.py  deps.py  models.py  repository.py  user_repository.py
backend/src/web/: pyproject.toml
backend/web/: main.py
backend/web/applications/: api.py  api_schema.py  deps.py  models.py  repository.py  service.py  status_flow.py
backend/web/auth/: api.py  crypto.py  deps.py
backend/web/common/: deps.py  pagination.py
backend/web/jobs/: api_schema.py  deps.py  models.py  repository.py  service.py
backend/web/users/: api.py  deps.py  models.py  repository.py
(+67 files in other folders)
