[project]
name = "hiremepls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.1",
    "bs4>=0.0.2",
    "curl-cffi>=0.9.0",
    "email-validator>=2.2.0",
    "fastapi[standard]>=0.115.10",
    "langchain>=0.3.20",
    "langchain-google-genai>=2.0.11",
    "loguru>=0.7.3",
    "lxml>=5.3.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.2.5",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.23",
    "zendriver>=0.5.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "rich>=13.9.4",
    "ruff>=0.9.9",
]

[tool.ruff]
line-length = 100
exclude = ["alembic/"]

[tool.mypy]
strict = true
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = "passlib.*"
ignore_missing_imports = true
