[project]
name = "hiremepls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "rich>=13.9.4",
    "ruff>=0.9.9"
]

[tool.ruff]
line-length = 100
exclude = ["alembic/"]

[tool.mypy]
strict = true
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = "passlib.*"
ignore_missing_imports = true

[tool.uv.workspace]
members = ["packages/*"]
