[project]
name = "hiremepls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pyright>=1.1.398",
    "rich>=13.9.4",
    "ruff>=0.9.9",
]

[tool.ruff]
line-length = 100
exclude = ["alembic/"]


[tool.pyright]
include = ["packages/**"]
typeCheckingMode = "standard"
extraPaths = ["packages/lib", "packages/web", "packages/tasks"]

reportDuplicateImport = "warning"
deprecateTypingAliases = true
reportMissingTypeArgument = "error"


[tool.uv.workspace]
members = ["packages/*"]
